<package format="3">
    <name>mbf_msgs</name>
    <version>0.4.0</version>
    <description>
        The move_base_flex messages package providing the action definition files for the action GetPath, ExePath, Recovery and MoveBase. The action servers providing these action are implemented in <a href="http://wiki.ros.org/mbf_abstract_nav">mbf_abstract_nav</a>.
    </description>
    <author email="santos@magazino.eu">Jorge Santos</author>
    <author email="spuetz@uni-osnabrueck.de">Sebastian Pütz</author>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <!-- <depend>genmsg</depend>
    <depend>message_runtime</depend>
    <depend>message_generation</depend> -->

    <exec_depend>rosidl_default_runtime</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
