<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_mbf_plugins</name>
  <version>1.0.0</version>
  <description>
    Contains rviz plugins for interacting with move base flex.
  </description>
  <author email="matthias.holoch@naturerobots.com">Matthias Holoch</author>
  <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mbf_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>

  <test_depend>ament_cmake_auto</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
